--- a/index.html
+++ b/index.html
@@ -1,11 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/influencer.css">
     <title>influencer gear</title>
+    <script src="https://kit.fontawesome.com/d879351b39.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <div class="navbar">
+            <h1 class="navbar-title poppins-bold">Influencer products</h1>
+            <ul class="navbar-list poppins-semibold">
+                <li><a href="" class="list-items">Home</a></li>
+                <li><a href="" class="list-items">Products</a></li>
+                <li><a href="" class="list-items">Sign up</a></li>
+                <li><a href="" class="list-items">Log In</a></li>
+                <li><img src="./icons/search.png" alt=""></li>
+                <li><img src="./icons/shoppingcart.png" alt=""></li>
+            </ul>
+
+        </div>
+        <!-- banner part starts -->
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title poppins-bold">Start your Journey as<br>Influencer</h1>
+                <p class="banner-description poppins-semibold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Sem vestibulum
+                    sed
+                    scelerisque eros. Lectus faucibus.</p>
+                <button class="button poppins-bold">Preebook now <img src="./icons/rightarrow.png" alt=""></button>
+            </div>
+            <div class="banner-image">
+                <img src="./images/main-camera.png" alt="" width="440px" height="414px">
+            </div>
+
+        </div>
+        <!-- banner part ends -->
+
+
+
+    </header>
+    <main>
+        <!-- companies section start -->
+        <section class="companies">
+            <div class="companies-wrapper">
+                <img src="./logos/Alibaba.svg" alt="">
+                <img src="./logos/Amazon.svg" alt="">
+                <img src="./logos/Daraz.pk Logo.svg" alt="">
+                <img src="./logos/Ebay.svg" alt="">
+                <img src="./logos/Rakuten.svg" alt="">
+                <img src="./logos/Target.svg" alt="">
+                <img src="./logos/Walmart.svg" alt="">
+            </div>
+        </section>
+        <!-- popular collection starts -->
+        <section class="popular-collection">
+            <div class="popular-contents">
+                <h3 class="collection-title poppins-semibold">Popular Collection</h3>
+
+                <div class="card-wrapper">
+                    <div class="card">
+                        <img src="./images/tripod.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/mic.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/airpod.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/drone.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/setup.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/lights.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/single-light.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/lights.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/drone.png" alt="" width="100%" height="256px">
+                        <h3 class="card-title poppins-medium">Flex Tripod</h3>
+                        <h4 class="card-price inter-font">$50.48</h4>
+                        <p class="card-description inter-font">Wordwide shifting<br>available<br>Buyers protection
+                            possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="pink-button-wrapper">
+                    <button class="pink-button poppins-bold">See More <img src="./icons/rightpink.png" alt=""></button>
+                </div>
+            </div>
+        </section>
+
+        <!-- featured product -->
+        <section class="featured-section">
+            <div class="featured-elements">
+                <img src="./images/gear.png" alt="" width="404px" height="270px">
+                <div class="featured-title-description">
+                    <h1 class="featured-title poppins-bold">Featured products at one place</h1>
+                    <p class="featured-description poppins-bold">Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet
+                        sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.</p>
+                    <div class="square-pink-button-wrapper">
+                        <button class="square-pink-button poppins-bold">Join Now <img src="./icons/rightarrow.png"
+                                alt=""></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+    </main>
+    <footer>
+        <div class="credits">
+            <h3 class="credits-title">Influencer products</h3>
+            <p class="credits-copyright">Copyright © 2020 influencer products <br>All rights reserved</p>
+            <div class="credits-wrapper">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-dribbble"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
